--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "title":"任务计划程序的博客",
+    "subTitle":"任务计划程序的博客",
+    "avatarUrl":"https://avatars.githubusercontent.com/u/174809725?v=4",
     "GMEEK_VERSION":"last"
 }
